# goit-PW-hw-10

dz_10/: .dockerignore  .gitignore  Dockerfile  Procfile  fly.toml  main.py  pyproject.toml  requirements.txt
dz_10/author/: manage.py
dz_10/author/author/: asgi.py  settings.py  urls.py  wsgi.py
dz_10/author/authorapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
dz_10/author/authorapp/migrations/: 0001_initial.py
dz_10/author/authorapp/templates/authorapp/: author.html  base.html  detail.html  detail_author.html  detail_quote.html  index.html  quote.html  quotes.html
dz_10/author/authorapp/templatetags/: extract_tags.py
dz_10/notes/noteapp/: views.py
dz_10/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
dz_10/notes/noteapp/templates/noteapp/: detail.html  index.html
dz_10/notes/notes/: settings.py  urls.py
dz_10/notes/users/: views.py
dz_10/quotes/: .env  db.sqlite3
dz_10/quotes/media/profile_images/: images.jfif
dz_10/quotes/quoteapp/: forms.py  models.py  urls.py  utils.py  views.py
dz_10/quotes/quoteapp/migrations/: 0001_initial.py  0002_rename_autor_author.py  0003_alter_tag_name.py
dz_10/quotes/quoteapp/static/quoteapp/: style.css
dz_10/quotes/quoteapp/templates/quoteapp/: author.html  base.html  detail_tag.html  (+2 more)
dz_10/quotes/quoteapp/templatetags/: extract_tags.py
dz_10/quotes/quotes/: asgi.py  settings.py  urls.py  wsgi.py
dz_10/quotes/users/: forms.py  models.py  urls.py  views.py
dz_10/quotes/users/migrations/: 0001_initial.py
dz_10/quotes/utils/: migrate.py
(+7 files in other folders)
